--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "miao hei",
-            "email": "symok@qq.com@qq.com"
+            "email": "symok@qq.com"
         }
     ],
     "require": {
